--- a/sass/partials/_custom.scss
+++ b/sass/partials/_custom.scss
@@ -1,7 +1,10 @@
 
 $primary-background: #E5E5E5;
 $secondary-background: #F4F3EE;
-$accent: #C32C72;
+$red: #C32C72;
 $black: #262626;
 $dark-gray: #463F3A;
 $light-gray: #8D8D8D;
+
+
+
