--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
-  --bs-red: #dc3545;
+  --bs-red: #C32C72;
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
   --bs-green: #198754;
@@ -26,7 +26,7 @@
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
-  --bs-danger: #dc3545;
+  --bs-danger: #C32C72;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 13, 110, 253;
@@ -34,7 +34,7 @@
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
-  --bs-danger-rgb: 220, 53, 69;
+  --bs-danger-rgb: 195, 44, 114;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-white-rgb: 255, 255, 255;
@@ -2139,15 +2139,15 @@ progress {
 }
 
 .table-danger {
-  --bs-table-bg: #f8d7da;
-  --bs-table-striped-bg: #eeced1;
+  --bs-table-bg: #f3d5e3;
+  --bs-table-striped-bg: #e9ccda;
   --bs-table-striped-color: #262626;
-  --bs-table-active-bg: #e3c5c8;
+  --bs-table-active-bg: #dfc4d0;
   --bs-table-active-color: #262626;
-  --bs-table-hover-bg: #e8cacd;
+  --bs-table-hover-bg: #e4c8d5;
   --bs-table-hover-color: #262626;
   color: #262626;
-  border-color: #e3c5c8;
+  border-color: #dfc4d0;
 }
 
 .table-light {
@@ -3055,7 +3055,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #dc3545;
+  color: #C32C72;
 }
 
 .invalid-tooltip {
@@ -3068,7 +3068,7 @@ textarea.form-control-lg {
   margin-top: .1rem;
   font-size: 0.875rem;
   color: #fff;
-  background-color: rgba(220, 53, 69, 0.9);
+  background-color: rgba(195, 44, 114, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -3080,18 +3080,18 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
-  border-color: #dc3545;
+  border-color: #C32C72;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23C32C72'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23C32C72' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
-  border-color: #dc3545;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  border-color: #C32C72;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
 }
 
 .was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
@@ -3100,37 +3100,37 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:invalid, .form-select.is-invalid {
-  border-color: #dc3545;
+  border-color: #C32C72;
 }
 
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23C32C72'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23C32C72' stroke='none'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-select:invalid:focus, .form-select.is-invalid:focus {
-  border-color: #dc3545;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  border-color: #C32C72;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
 }
 
 .was-validated .form-check-input:invalid, .form-check-input.is-invalid {
-  border-color: #dc3545;
+  border-color: #C32C72;
 }
 
 .was-validated .form-check-input:invalid:checked, .form-check-input.is-invalid:checked {
-  background-color: #dc3545;
+  background-color: #C32C72;
 }
 
 .was-validated .form-check-input:invalid:focus, .form-check-input.is-invalid:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.25);
 }
 
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
-  color: #dc3545;
+  color: #C32C72;
 }
 
 .form-check-inline .form-check-input ~ .invalid-feedback {
@@ -3403,43 +3403,43 @@ fieldset:disabled .btn {
 
 .btn-danger {
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  background-color: #C32C72;
+  border-color: #C32C72;
 }
 
 .btn-danger:hover {
   color: #fff;
-  background-color: #bb2d3b;
-  border-color: #b02a37;
+  background-color: #a62561;
+  border-color: #9c235b;
 }
 
 .btn-check:focus + .btn-danger, .btn-danger:focus {
   color: #fff;
-  background-color: #bb2d3b;
-  border-color: #b02a37;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
+  background-color: #a62561;
+  border-color: #9c235b;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(204, 76, 135, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(204, 76, 135, 0.5);
 }
 
 .btn-check:checked + .btn-danger,
 .btn-check:active + .btn-danger, .btn-danger:active, .btn-danger.active,
 .show > .btn-danger.dropdown-toggle {
   color: #fff;
-  background-color: #b02a37;
-  border-color: #a52834;
+  background-color: #9c235b;
+  border-color: #922156;
 }
 
 .btn-check:checked + .btn-danger:focus,
 .btn-check:active + .btn-danger:focus, .btn-danger:active:focus, .btn-danger.active:focus,
 .show > .btn-danger.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(204, 76, 135, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(204, 76, 135, 0.5);
 }
 
 .btn-danger:disabled, .btn-danger.disabled {
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  background-color: #C32C72;
+  border-color: #C32C72;
 }
 
 .btn-light {
@@ -3695,36 +3695,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-danger {
-  color: #dc3545;
-  border-color: #dc3545;
+  color: #C32C72;
+  border-color: #C32C72;
 }
 
 .btn-outline-danger:hover {
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  background-color: #C32C72;
+  border-color: #C32C72;
 }
 
 .btn-check:focus + .btn-outline-danger, .btn-outline-danger:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.5);
 }
 
 .btn-check:checked + .btn-outline-danger,
 .btn-check:active + .btn-outline-danger, .btn-outline-danger:active, .btn-outline-danger.active, .btn-outline-danger.dropdown-toggle.show {
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  background-color: #C32C72;
+  border-color: #C32C72;
 }
 
 .btn-check:checked + .btn-outline-danger:focus,
 .btn-check:active + .btn-outline-danger:focus, .btn-outline-danger:active:focus, .btn-outline-danger.active:focus, .btn-outline-danger.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(195, 44, 114, 0.5);
 }
 
 .btn-outline-danger:disabled, .btn-outline-danger.disabled {
-  color: #dc3545;
+  color: #C32C72;
   background-color: transparent;
 }
 
@@ -5615,19 +5615,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-danger {
-  color: #842029;
-  background-color: #f8d7da;
+  color: #751a44;
+  background-color: #f3d5e3;
 }
 
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #842029;
-  background-color: #dfc2c4;
+  color: #751a44;
+  background-color: #dbc0cc;
 }
 
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #842029;
-  border-color: #842029;
+  background-color: #751a44;
+  border-color: #751a44;
 }
 
 .list-group-item-light {
@@ -6068,11 +6068,11 @@ fieldset:disabled .btn {
 }
 
 .link-danger {
-  color: #dc3545;
+  color: #C32C72;
 }
 
 .link-danger:hover, .link-danger:focus {
-  color: #b02a37;
+  color: #9c235b;
 }
 
 .link-light {
@@ -6546,7 +6546,7 @@ fieldset:disabled .btn {
 }
 
 .border-danger {
-  border-color: #dc3545 !important;
+  border-color: #C32C72 !important;
 }
 
 .border-light {
@@ -10629,30 +10629,19 @@ fieldset:disabled .btn {
 
 body {
   background-color: #E5E5E5;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-main {
-  width: 100%;
-  max-width: 1200px;
 }
 
 a {
   text-decoration: none;
 }
 
-.header {
-  background-color: #F4F3EE;
+h1, .h1 {
+  text-align: center;
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.header__container, .footer__container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -10663,17 +10652,26 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 100%;
-  max-width: 1200px;
-  padding: 30px;
 }
 
-.logo {
-  color: #262626;
-  font-size: 36px;
+body {
+  background-color: #E5E5E5;
 }
 
-.nav ul {
+a {
+  text-decoration: none;
+}
+
+h1, .h1 {
+  text-align: center;
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.header__container, .footer__container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10683,42 +10681,65 @@ a {
           flex-direction: row;
 }
 
-.nav ul li {
-  padding: 10px;
-  list-style: none;
+.header {
+  background-color: #F4F3EE;
+  height: 70px;
 }
 
-.nav a {
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #8D8D8D;
+.logo {
+  color: #262626;
+  font-size: 36px;
 }
 
-body {
-  background-color: #E5E5E5;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.navbar {
+  background-color: #F4F3EE;
 }
 
-main {
-  width: 100%;
-  max-width: 1200px;
+.navbar-brand {
+  font-size: 36px;
+  color: #262626 !important;
+}
+
+.navbar-toggler-icon {
+  color: #262626 !important;
 }
 
 a {
-  text-decoration: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #8D8D8D !important;
+}
+
+.active {
+  color: #C32C72 !important;
+}
+
+.box {
+  width: 264px;
+  height: 263px;
+  background-color: #F4F3EE;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(38, 38, 38, 0.15);
+          box-shadow: 0 0.5rem 1rem rgba(38, 38, 38, 0.15);
+}
+
+.box__white {
+  background-color: #fff;
+  border: 3px solid #C32C72;
+}
+
+.box__red {
+  background-color: #C32C72;
+  border: 3px solid #fff;
 }
 
 footer {
   background-color: #F4F3EE;
+  color: #8D8D8D;
+  height: 44px;
+}
+
+footer p {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
