--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,4 +2,10 @@
 
 footer{
     background-color: $secondary-background;
+    color: $light-gray;
+    height: 44px;
+
+    p{
+        display: block;
+    }
 }
