--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -5,8 +5,8 @@
     font-size: 36px;
     color: $black !important;
 }
-.navbar-toggler-icon{
-    color: $black !important;
+.navbar-expand-md{
+    justify-content: space-between;
 }
 a{
     font-size: 18px;
